# FemtoBoot

app/: STM32L496RGTx_FLASH.ld
app/ARMCM0_STM32F072RB_Nucleo/: .mxproject  ARMCM0_STM32F072RB_Nucleo.ioc  Makefile  STM32F072RBTx_FLASH.ld
app/ARMCM0_STM32F072RB_Nucleo/Core/Inc/: main.h
app/ARMCM0_STM32F072RB_Nucleo/Core/Src/: main.c  stm32f0xx_it.c
app/ARMCM4_STM32L496RG/: .mxproject  Makefile  app.ioc
app/ARMCM4_STM32L496RG/Core/Inc/: main.h
app/Core/Src/: main.c  system_stm32l4xx.c
boot/ARMCM0_STM32F072RB_Nucleo/: CMakeLists.txt  Makefile
boot/ARMCM0_STM32F072RB_Nucleo/Core/Inc/: boot_config.h
boot/ARMCM0_STM32F072RB_Nucleo/Core/Src/: boot_flash.c  boot_ll_util.c  boot_timer.c  main.c
boot/ARMCM4_STM32L476RG/: .mxproject  ARMCM4_STM32L476RG.ioc  Makefile
boot/ARMCM4_STM32L476RG/Inc/: main.h
boot/ARMCM4_STM32L476RG/Src/: main.c  stm32l4xx_it.c
boot/ARMCM4_STM32L476RG_Nucleo/: CMakeLists.txt
boot/ARMCM4_STM32L476RG_Nucleo/Core/Inc/: main.h  stm32l4xx_hal_conf.h
boot/ARMCM4_STM32L476RG_Nucleo/Core/Src/: boot_can.c  boot_ll_util.c  boot_timer.c  main.c
boot/ARMCM4_STM32L496RG/: CMakeLists.txt
boot/ARMCM4_STM32L496RG/Core/Inc/: boot_config.h  main.h
boot/ARMCM4_STM32L496RG/Core/Src/: boot_flash.c  boot_ll_util.c  boot_tim.c  boot_timer.c  boot_uart.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
bootutil/: CMakeLists.txt
bootutil/inc/: boot.h  boot_types.h  can.h  com.h  com_types.h  crc32.h  flash.h  ll_util.h  tim.h  timer.h  uart.h
bootutil/src/: boot.c  com.c  crc32.c  sequence.c  timer.c
common/: arm-cm0.cmake
host/: BootTarget.cpp  BootTarget.hpp  CMakeLists.txt  boot_config.h  serial.c  serial.h  test.cpp
host/Core/Inc/: BinaryFile.hpp  BootTarget.hpp  boot_config.h  win_serial.h
host/Core/Src/: BinaryFile.cpp  BootTarget.cpp  boot_ll_util.c  boot_timer.c  main.cpp  win_serial.c
tests/: CMakeLists.txt  Crc32Test.cpp
